
VERSION 3.3.2 UNRELEASED
  FEATURES:
   * Show 'added to collection' time in tag dialog when available (BR 508899)

  CHANGES:
   * Make single click open items and double click add to playlist in collection
     browser.
   * Amarok now depends on KDE Frameworks 6.5.

  BUGFIXES:
   * Fixes to Magnatune collection update and playback (BR 508052)
   * Fix some issues in playlist layout editor

VERSION 3.3.1
  FEATURES:
   * Enable saving and loading script console items, autocompletion in script
     console, and re-enable some more scripting functionality

  CHANGES:
   * Convert the remaining main UI toolbuttons to use icons from theme
   * Clear out remnants of the now-discontinued MusicDNS service

  BUGFIXES:
   * Fix example permission grant command in database settings (BR 386004)
   * Fix equalizer gains not updating when selecting some presets (BR 463908)
   * Fix continuing playback after timecoded tracks (cue files etc, BR 270003)
   * Fix MusicBrainz search
   * Properly start CD playback if Amarok is not already running (BR 503310)
   * Also transmit embedded cover art through MPRIS (BR 357620)
   * Don't show transcoding dialog after canceling download (BR 275840)
   * Load network information earlier to avoid crashes on startup (BR 507497)
   * Try to export as-compatible-as-possible playlist files (BR 507329)
   * Fix some random crashes during playback

VERSION 3.3.0
  FEATURES:

  CHANGES:

  BUGFIXES:
   * Default to not allow compiling without embedded database (BR 502777)
   * Handle volume better and avoid resets on track changes (BR 506427)

VERSION 3.2.82
  FEATURES:
   * Audio engine has been reworked to use gstreamer instead of phonon

  CHANGES:
   * Apply default pre-gain when ReplayGain is active and use fallback value
     if no ReplayGain data is available for a track
   * Clear out some of the now-discontinued last.fm radio functionalities and
     partially replace by opening relevant last.fm pages

  BUGFIXES: